capping off lowerbound to prevent overflow to QUAM title bar below

--- a/frontend/src/modules/Nodes/components/Results/Results.module.scss
+++ b/frontend/src/modules/Nodes/components/Results/Results.module.scss
@@ -4,6 +4,8 @@
 .wrapper {
   height: 100%;
   min-height: 65%;
+  max-height: 100%;
+  overflow-y: auto;
   border: 1px solid var(--border-color);
   background-color: var(--popup-background);
   padding-bottom: 15px;
